Added Aether Addon Support
- Added Support for Protect Your Moa
- Added Support for Treasure Reforging
- Removed Duplicated Netherite Upgrade Smithing Template

--- a/assets/legacy/lang/en_us.json
+++ b/assets/legacy/lang/en_us.json
@@ -343,6 +343,8 @@
   "block.aether.white_flower.tip": "These extremely good-smelling roses can make great gifts to a friend or loved one. They spawn in large groups around the Aether.",
   "block.aether.zanite_block.tip": "A block of compacted Zanite Gemstones. They can power beacons and have a sleek look to them.",
   "block.aether.zanite_ore.tip": "A slightly rare ore that drops Zanite Gemstones when broken with stone tools.",
+  "block.aether_treasure_reforging.pyral_block.tip": "Block of Pyral",
+  "block.aether_treasure_reforging.valkyrum_block.tip": "Block of Valkyrum",
   "block.legacy.shrub": "Shrub",
   "block.minecraft.acacia_pressure_plate.tip": "A sensitive Acacia pressure plate that can be activated by applying almost any amount of pressure.",
   "block.minecraft.activator_rail.tip": "A type of rail that can enable or disable Minecarts with Hoppers and trigger Minecarts with TNT.",
@@ -1652,6 +1654,31 @@
   "item.aether.zanite_ring.tip": "A Ring which allows you to mine faster. It doesn't last for long, so use it wisely!",
   "item.aether.zanite_shovel.tip": "One of the Aether's mid-tier tools, as you mine Aether Dirt and Quicksoil, the durability will decrease and the Shovel will get faster. If you wait long enough, it will start breaking blocks instantly! Be careful repairing it, as it will be slower when there is more durability.",
   "item.aether.zanite_sword.tip": "One of the Aether's mid-tier tools, the attack damage on this Sword starts at iron level and will increase up to twice as strong as it loses durability.",
+  "item.aether_protect_your_moa.diamond_moa_armor.tip": "A piece of iron armor for your Moa to wear, offering a strong amount of protection.",
+  "item.aether_protect_your_moa.golden_moa_armor.tip": "A piece of golden armor for your Moa to wear, offering a decent amount of protection.",
+  "item.aether_protect_your_moa.gravitite_moa_armor.tip": "A piece of gravitite armor for your Moa to wear, offering a strong amount of protection and increasing the amount of times it can jump.",
+  "item.aether_protect_your_moa.iron_moa_armor.tip": "A piece of iron armor for your Moa to wear, offering some amount of protection.",
+  "item.aether_protect_your_moa.leather_moa_armor.tip": "A dyeable piece of leather armor for your Moa to wear, offering a small amount of protection.",
+  "item.aether_protect_your_moa.zanite_moa_armor.tip": "A piece of zanite armor for your Moa to wear, offering some amount of protection.",
+  "item.aether_treasure_reforging.smithing_template.neptune_upgrade.additions_slot_description.tip": "Add Neptune Mesh",
+  "item.aether_treasure_reforging.smithing_template.neptune_upgrade.applies_to.tip": "Zanite Armor",
+  "item.aether_treasure_reforging.smithing_template.neptune_upgrade.base_slot_description.tip": "Add a piece of zanite armor",
+  "item.aether_treasure_reforging.smithing_template.neptune_upgrade.ingredients.tip": "Neptune Mesh",
+  "item.aether_treasure_reforging.smithing_template.phoenix_upgrade.additions_slot_description.tip": "Add Pyral Ingot",
+  "item.aether_treasure_reforging.smithing_template.phoenix_upgrade.applies_to.tip": "Gravitite Armor",
+  "item.aether_treasure_reforging.smithing_template.phoenix_upgrade.base_slot_description.tip": "Add a piece of gravitite armor",
+  "item.aether_treasure_reforging.smithing_template.phoenix_upgrade.ingredients.tip": "Pyral Ingot",
+  "item.aether_treasure_reforging.smithing_template.valkyrie_upgrade.additions_slot_description.tip": "Add Valkyrum Ingot",
+  "item.aether_treasure_reforging.smithing_template.valkyrie_upgrade.applies_to.tip": "Gravitite Equipment",
+  "item.aether_treasure_reforging.smithing_template.valkyrie_upgrade.base_slot_description.tip": "Add gravitite armor, weapon, or tool",
+  "item.aether_treasure_reforging.smithing_template.valkyrie_upgrade.ingredients.tip": "Valkyrum Ingot",
+  "item.aether_treasure_reforging.neptune_mesh.tip": "A mesh of interwoven blue metallic links. With the respective template, it can be used in a Smithing Table to forge Neptune armor.",
+  "item.aether_treasure_reforging.neptune_upgrade_smithing_template.tip": "A smithing template that can be used in the creation of Neptune Armor, using both Neptune Mesh and Zanite Armor.",
+  "item.aether_treasure_reforging.phoenix_upgrade_smithing_template.tip": "A smithing template that can be used in the creation of Phoenix Armor, using both Pyral Ingots and Gravitite Armor.",
+  "item.aether_treasure_reforging.pyral_ingot.tip": "A hardened and fire-resistant ingot. With the respective template, it can be used in a Smithing Table to forge Phoenix armor.",
+  "item.aether_treasure_reforging.pyral_shard.tip": "When combined with obsidian, fragments of Pyral material can be used to craft Pyral Ingots. The shard can also function as a long-lasting fuel.",
+  "item.aether_treasure_reforging.valkyrie_upgrade_smithing_template.tip": "A smithing template that can be used in the creation of Valkyrie equipment, using both Valkyrum Ingots and Gravitite equipment.",
+  "item.aether_treasure_reforging.valkyrum_ingot.tip": "A rare metal utilized by the Valkyries. With the respective template, it can be used in a Smithing Table to forge Valkyrie equipment.",
   "item.minecraft.amethyst_shard.tip": "Acquired by mining Budding Amethyst. Can be used to make Tinted Glass and a Spyglass.",
   "item.minecraft.apple.tip": "Restores 2 §f🍖§r, and can be crafted into a golden apple.",
   "item.minecraft.armor_stand.tip": "Can be equipped to display armor and other decorative items such as mob heads.",
